<resources>
    <string name="app_name">Compose App</string>
    <string name="happy_birthday_text">happy birthday boss</string>
    <string name="name_text">- beddu</string>
    <string name="first_section">Jetpack Compose is a modern toolkit for building native Android UI. Compose simplifies and accelerates UI development on Android with less code, powerful tools, and intuitive Kotlin APIs.</string>
    <string name="second_section">In this tutorial, you build a simple UI component with declarative functions. You call Compose functions to say what elements you want and the Compose compiler does the rest. Compose is built around Composable functions. These functions let you define your app\'s UI programmatically because they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\'s construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you add the @Composable annotation to the function name.</string>
    <string name="title_section">Jetpack Compose Tutorial</string>
    <string name="all_task_completed">All tasks completed</string>
    <string name="detail_task_completed">Nice work!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_jet_coffe">JetCoffeActivity</string>
    <string name="placeholder_search">Cari kopi pilihanmu!</string>
    <string name="category_all">All</string>
    <string name="category_americano">Americano</string>
    <string name="category_cappuccino">Cappuccino</string>
    <string name="category_espresso">Espresso</string>
    <string name="category_frappe">Frappe</string>
    <string name="category_latte">Latte</string>
    <string name="category_macchiato">Macchiato</string>
    <string name="category_mocha">Mocha</string>
    <string name="section_category">Mau ngopi apa hari ini?</string>
    <string name="section_favorite_menu">Menu Favorit</string>
    <string name="section_best_seller_menu">Menu Terlaris</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_temp_converter">TempConverterActivity</string>
    <string name="stateful_converter">Stateful Converter</string>
    <string name="stateless_converter">Stateless Converter</string>
    <string name="two_way_converter">Two Way Converter</string>
    <string name="enter_celsius">Enter temperature in Celsius</string>
    <string name="temperature_fahrenheit">Temperature in Fahrenheit : %s</string>
    <string name="enter_temperature">Enter temperature in %s</string>
    <string name="title_activity_navigation_drawe">NavigationDrawerActivity</string>
    <string name="hello_world">Hello World</string>
    <string name="menu">Menu</string>
    <string name="hello_from_nav_drawer">Hello From Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="coming_soon">%s Menu is Coming Soon!</string>
    <string name="subscribe_question">Subscribe?</string>
    <string name="subscribed_info">Subscribed. You will informed when the feature is ready</string>
    <string name="title_activity_jet_heroes">JetHeroesActivity</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="search_hero">Cari pahlawanmu</string>
    <string name="menu_cart">cart</string>
    <string name="required_point">%d Pts</string>
    <string name="back">Kembali</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="add_to_cart">tambah ke keranjang : %d</string>
    <string name="total_order">Total Order %d</string>
    <string name="share_message">Hey, I have redeem %1$d rewards in Dicoding with total %2$d Points. Do you want too?</string>
    <string name="dicoding_reward">Dicoding Reward</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="enter_length">Masukkan panjang</string>
    <string name="enter_width">Masukkan lebar</string>
    <string name="count">Hitung!</string>
    <string name="result">Hasil: %s</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
</resources>
