...
    
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("RewardList")
    ){
        items(orderReward){
            RewardItem(
                image = it.reward.image,
                title = it.reward.title,
                requiredPoint = it.reward.requiredPoint,
...
